# conductor-rl

./: .env.example  .gitignore  PROGRESS.md  README.md  build.md
.claude/: settings.json
.claude/docs/: DESIGN.md
.claude/docs/research/: prime-env-authoring-2026.md  prime-rl-multinode-slurm-2026.md
configs/: default.yaml  rl.toml  secrets.env.example  slurm.toml  smoke.toml
data/pilot/: code.manifest.json  hard_math.manifest.json  science_mcq.manifest.json
docs/: data-spec.md  phase3-training.md  reward-spec.md
environments/conductor_workflow/: README.md  pyproject.toml  ruff.toml
environments/conductor_workflow/.prime/: .env-metadata.json
environments/conductor_workflow/conductor_workflow/: __init__.py  _env_wiring.py  config.py  executor.py  parser.py  reward.py  workers.py
environments/conductor_workflow/conductor_workflow/assets/: __init__.py  default.yaml
environments/conductor_workflow/conductor_workflow/assets/pilot/: code.jsonl  pilot.jsonl
environments/conductor_workflow/conductor_workflow/graders/: math_verify.py
environments/conductor_workflow/src/conductor_workflow/: __init__.py  _env_wiring.py  config.py  judge.py  reward.py
environments/conductor_workflow/src/conductor_workflow/assets/pilot/: __init__.py  hard_math.jsonl  science_mcq.jsonl
environments/conductor_workflow/src/conductor_workflow/graders/: __init__.py  code_exec.py  math_verify.py  mcq_exact.py
environments/conductor_workflow/tests/: conftest.py  test_code_exec.py  test_executor.py  test_load_environment.py  test_masking.py  test_math_verify.py  test_mcq_exact.py  test_parser.py  test_reward.py  test_workers.py
prompts/: conductor_system_prompt.md
scripts/: sync_assets.sh  train.sh
src/conductor/: README.md
