[project]
name = "conductor-workflow"
description = "Conductor-RL: Multi-agent workflow orchestration environment for GRPO training"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "sympy>=1.13",
    "math-verify>=0.5.2",
    "verifiers>=0.1.14",
    "openai>=1.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "datasets>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "ty>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conductor_workflow"]

[tool.hatch.build.targets.sdist]
include = ["src/conductor_workflow/", "pyproject.toml"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
