[project]
name = "conductor-workflow"
description = "Conductor-RL: Multi-agent workflow orchestration environment for GRPO training"
tags = ["train", "eval", "orchestration", "multi-agent", "grpo"]
version = "0.2.4"
requires-python = ">=3.10"
dependencies = [
    "sympy>=1.13",
    "math-verify>=0.5.2",
    "verifiers>=0.1.14",
    "openai>=1.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "datasets>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "ty>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["conductor_workflow"]

[tool.hatch.build.targets.sdist]
include = ["conductor_workflow/", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3

# Ruff config lives in ruff.toml (prime env push corrupts pyproject version keys).

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
